add translation function

--- a/popup.html
+++ b/popup.html
@@ -29,6 +29,7 @@
 <body>
     <h1 id="alert" style="display: none;"></h1>
     <h2>Your Word List</h2>
+    <h4><a href="options.html">Settings</a></h4>
     <button id="toggleViewBtn">Show All</button>
     <button id="exportBtn">Export</button>
     <button id="importBtn">Import</button>
