--- a/options.html
+++ b/options.html
@@ -28,45 +28,45 @@
         <label for="sourceLang">Translation Source Language:</label>
         <select id="sourceLang">
             <option value="auto">Auto Detect</option>
-            <option value="en">English</option>
-            <option value="id">Indonesian</option>
+            <option value="en-US">English</option>
+            <option value="id-ID">Indonesian</option>
             <!-- Europe -->
-            <option value="es">Spanish</option>
-            <option value="fr">French</option>
-            <option value="de">German</option>
-            <option value="it">Italian</option>
-            <option value="nl">Dutch</option>
-            <option value="pt">Portuguese</option>
-            <option value="ru">Russian</option>
+            <option value="es-ES">Spanish</option>
+            <option value="fr-FR">French</option>
+            <option value="de-DE">German</option>
+            <option value="it-IT">Italian</option>
+            <option value="pt-PT">Portuguese</option>
+            <option value="nl-NL">Dutch</option>
+            <option value="ru-RU">Russian</option>
             <!-- East Asia -->
-            <option value="zh">Chinese(Simplified)</option>
+            <option value="zh-CN">Chinese(Simplified)</option>
             <option value="zh-TW">Chinese(Traditional)</option>
-            <option value="ja">Japanese</option>
-            <option value="ko">Korean</option>
+            <option value="ja-JP">Japanese</option>
+            <option value="ko-KR">Korean</option>
             <!-- SouthEast Asia-->
-            <option value="ms">Malay</option>
-            <option value="th">Thai</option>
-            <option value="vi">Vietnamese</option>
-            <option value="tl">Tagalog</option>
-            <option value="my">Burmese</option>
-            <option value="km">Khmer</option>
-            <option value="lo">Lao</option>
-            <option value="jv">Javanese</option>
-            <option value="su">Sundanese</option>
+            <option value="ms-MY">Malay</option>
+            <option value="th-TH">Thai</option>
+            <option value="vi-VN">Vietnamese</option>
+            <option value="tl-PH">Filipino</option>
+            <option value="my-MM">Burmese</option>
+            <option value="km-KH">Khmer</option>
+            <option value="lo-LA">Lao</option>
+            <option value="jv-ID">Javanese</option>
+            <option value="su-ID">Sundanese</option>
             <!-- Other -->
-            <option value="ar">Arabic</option>
-            <option value="hi">Hindi</option>
-            <option value="bn">Bengali</option>
-            <option value="ur">Urdu</option>
-            <option value="fa">Persian</option>
-            <option value="tr">Turkish</option>
-            <option value="he">Hebrew</option>
-            <option value="el">Greek</option>
-            <option value="pl">Polish</option>
-            <option value="cs">Czech</option>
-            <option value="hu">Hungarian</option>
-            <option value="ro">Romanian</option>
-            <option value="sv">Swedish</option>
+            <option value="ar-SA">Arabic</option>
+            <option value="hi-IN">Hindi</option>
+            <option value="bn-BD">Bengali</option>
+            <option value="ur-PK">Urdu</option>
+            <option value="fa-IR">Persian</option>
+            <option value="tr-TR">Turkish</option>
+            <option value="he-IL">Hebrew</option>
+            <option value="el-GR">Greek</option>
+            <option value="pl-PL">Polish</option>
+            <option value="cs-CZ">Czech</option>
+            <option value="hu-HU">Hungarian</option>
+            <option value="ro-RO">Romanian</option>
+            <option value="sv-SE">Swedish</option>
         </select>
     </div>
     <button id="save">Save</button>
