--- a/options.html
+++ b/options.html
@@ -1,75 +1,392 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Extension Options</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>擴充功能設定</title>
     <style>
+        :root {
+            --bg: #fff5f6;
+            --card: #ffffff;
+            --text: #2a1014;
+            --muted: #7d4a52;
+            --primary: #d91f26;
+            --primary-strong: #b9161d;
+            --border: #f1cfd3;
+            --ok: #1d7f47;
+        }
+
+        * {
+            box-sizing: border-box;
+        }
+
         body {
-            width: 300px;
+            margin: 0;
+            padding: 22px;
+            min-height: 100vh;
+            background: #fff8f8;
+            border-top: 12px solid #d9101f;
+            color: var(--text);
+            font-family: "Manrope", "Noto Sans TC", "SF Pro Text", sans-serif;
+        }
+
+        .card {
+            max-width: 760px;
+            min-width: 480px;
+            min-height: 560px;
+            margin: 0 auto;
+            background: var(--card);
+            border: 1px solid var(--border);
+            border-radius: 10px;
+            padding: 24px;
+            box-shadow: 0 1px 2px rgba(16, 24, 40, 0.06);
+        }
+
+        h2 {
+            margin: 0;
+            font-size: 22px;
+            font-weight: 800;
+        }
+
+        .desc {
+            margin: 8px 0 16px;
+            color: var(--muted);
+            font-size: 13px;
+        }
+
+        .current {
+            margin: 0 0 12px;
+            font-size: 12px;
+            color: var(--muted);
+            background: #fff;
+            border: 1px solid var(--border);
+            border-radius: 10px;
             padding: 10px;
         }
+
+        .current strong {
+            color: var(--text);
+        }
+
+        .section {
+            border: 1px solid var(--border);
+            border-radius: 10px;
+            background: #fff;
+            padding: 14px;
+            margin-top: 14px;
+        }
+
+        .section-title {
+            font-size: 13px;
+            font-weight: 800;
+            margin-bottom: 10px;
+            color: #6b2a33;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 8px;
+            font-size: 13px;
+            font-weight: 700;
+        }
+
         select {
             width: 100%;
-            padding: 5px;
-            margin-bottom: 10px;
+            padding: 10px 12px;
+            margin-bottom: 14px;
+            border: 1px solid var(--border);
+            border-radius: 10px;
+            background: #fff;
+            color: var(--text);
+            font-size: 14px;
+            outline: none;
         }
+
+        select:focus {
+            border-color: #e4878f;
+            box-shadow: 0 0 0 3px rgba(217, 31, 38, 0.14);
+        }
+
+        .actions {
+            display: flex;
+            gap: 8px;
+            align-items: center;
+            margin-top: 16px;
+        }
+
         button {
-            margin: 0px 5px;
+            border: 0;
+            border-radius: 10px;
+            padding: 10px 16px;
+            background: var(--primary);
+            color: #fff;
+            font-size: 13px;
+            font-weight: 700;
+            cursor: pointer;
         }
-        label {
-            margin-bottom: 2px;
-            size: 12px;
-            display: block;
+
+        button:hover {
+            background: var(--primary-strong);
+        }
+
+        .btn-secondary {
+            background: #f8f9fb;
+            color: #8f1f2d;
+            border: 1px solid #f1cfd3;
+        }
+
+        .btn-secondary:hover {
+            background: #eef1f6;
+        }
+
+        .status {
+            font-size: 12px;
+            color: var(--ok);
+            min-height: 16px;
+        }
+
+        .switch-row {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 12px;
+            margin: 10px 0 0;
+            padding: 12px;
+            border: 1px solid var(--border);
+            border-radius: 10px;
+            background: #fff;
+        }
+
+        .switch-title {
+            font-size: 13px;
+            font-weight: 700;
+        }
+
+        .switch-desc {
+            margin-top: 3px;
+            font-size: 12px;
+            color: var(--muted);
+        }
+
+        .switch {
+            position: relative;
+            display: inline-block;
+            width: 48px;
+            height: 28px;
+        }
+
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #e7c9cd;
+            transition: .2s;
+            border-radius: 999px;
+        }
+
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 20px;
+            width: 20px;
+            left: 4px;
+            top: 4px;
+            background-color: white;
+            transition: .2s;
+            border-radius: 50%;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+        }
+
+        input:checked + .slider {
+            background-color: #d91f26;
+        }
+
+        input:checked + .slider:before {
+            transform: translateX(20px);
+        }
+
+        .io-title {
+            font-size: 13px;
+            font-weight: 800;
+            margin-bottom: 8px;
+            color: #6b2a33;
+        }
+
+        .io-actions {
+            display: flex;
+            gap: 8px;
+            flex-wrap: wrap;
+        }
+
+        .domain-row {
+            display: flex;
+            gap: 8px;
+            align-items: center;
+            margin-top: 8px;
+        }
+
+        .domain-row input {
+            flex: 1;
+            min-width: 0;
+            padding: 10px 12px;
+            border: 1px solid var(--border);
+            border-radius: 10px;
+            font-size: 13px;
+            outline: none;
+        }
+
+        .domain-row input:focus {
+            border-color: #e4878f;
+            box-shadow: 0 0 0 3px rgba(217, 31, 38, 0.14);
+        }
+
+        .domain-list {
+            margin-top: 10px;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 6px;
+        }
+
+        .domain-chip {
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
+            border: 1px solid var(--border);
+            background: #fff;
+            border-radius: 999px;
+            padding: 4px 8px;
+            font-size: 12px;
+            color: #5f2a31;
+        }
+
+        .domain-chip button {
+            border: 0;
+            background: transparent;
+            color: #8f1f2d;
+            font-size: 12px;
+            padding: 0;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
-    <h2>Options</h2>
-    <div>
-        <label for="sourceLang">Translation Source Language:</label>
-        <select id="sourceLang">
-            <option value="auto">Auto Detect</option>
-            <option value="en-US">English</option>
-            <option value="id-ID">Indonesian</option>
-            <!-- Europe -->
-            <option value="es-ES">Spanish</option>
-            <option value="fr-FR">French</option>
-            <option value="de-DE">German</option>
-            <option value="it-IT">Italian</option>
-            <option value="pt-PT">Portuguese</option>
-            <option value="nl-NL">Dutch</option>
-            <option value="ru-RU">Russian</option>
-            <!-- East Asia -->
-            <option value="zh-CN">Chinese(Simplified)</option>
-            <option value="zh-TW">Chinese(Traditional)</option>
-            <option value="ja-JP">Japanese</option>
-            <option value="ko-KR">Korean</option>
-            <!-- SouthEast Asia-->
-            <option value="ms-MY">Malay</option>
-            <option value="th-TH">Thai</option>
-            <option value="vi-VN">Vietnamese</option>
-            <option value="tl-PH">Filipino</option>
-            <option value="my-MM">Burmese</option>
-            <option value="km-KH">Khmer</option>
-            <option value="lo-LA">Lao</option>
-            <option value="jv-ID">Javanese</option>
-            <option value="su-ID">Sundanese</option>
-            <!-- Other -->
-            <option value="ar-SA">Arabic</option>
-            <option value="hi-IN">Hindi</option>
-            <option value="bn-BD">Bengali</option>
-            <option value="ur-PK">Urdu</option>
-            <option value="fa-IR">Persian</option>
-            <option value="tr-TR">Turkish</option>
-            <option value="he-IL">Hebrew</option>
-            <option value="el-GR">Greek</option>
-            <option value="pl-PL">Polish</option>
-            <option value="cs-CZ">Czech</option>
-            <option value="hu-HU">Hungarian</option>
-            <option value="ro-RO">Romanian</option>
-            <option value="sv-SE">Swedish</option>
-        </select>
+    <div class="card">
+        <h2 id="optionsTitle">翻譯設定</h2>
+        <p class="desc" id="optionsDesc">設定即時翻譯使用的來源語言。</p>
+
+        <p class="current"><span id="currentLangLabel">目前語言</span>：<strong id="currentLang">載入中...</strong></p>
+
+        <div class="section">
+            <div class="section-title">一般設定</div>
+            <div>
+                <label for="sourceLang" id="sourceLangLabel">翻譯來源語言</label>
+                <select id="sourceLang">
+                    <option value="auto">Auto</option>
+                    <option value="en-US">English</option>
+                    <option value="id-ID">Indonesian</option>
+                    <option value="es-ES">Spanish</option>
+                    <option value="fr-FR">French</option>
+                    <option value="de-DE">German</option>
+                    <option value="it-IT">Italian</option>
+                    <option value="pt-PT">Portuguese</option>
+                    <option value="nl-NL">Dutch</option>
+                    <option value="ru-RU">Russian</option>
+                    <option value="zh-CN">Chinese(Simplified)</option>
+                    <option value="zh-TW">Chinese(Traditional)</option>
+                    <option value="ja-JP">Japanese</option>
+                    <option value="ko-KR">Korean</option>
+                    <option value="ms-MY">Malay</option>
+                    <option value="th-TH">Thai</option>
+                    <option value="vi-VN">Vietnamese</option>
+                    <option value="tl-PH">Filipino</option>
+                    <option value="my-MM">Burmese</option>
+                    <option value="km-KH">Khmer</option>
+                    <option value="lo-LA">Lao</option>
+                    <option value="jv-ID">Javanese</option>
+                    <option value="su-ID">Sundanese</option>
+                    <option value="ar-SA">Arabic</option>
+                    <option value="hi-IN">Hindi</option>
+                    <option value="bn-BD">Bengali</option>
+                    <option value="ur-PK">Urdu</option>
+                    <option value="fa-IR">Persian</option>
+                    <option value="tr-TR">Turkish</option>
+                    <option value="he-IL">Hebrew</option>
+                    <option value="el-GR">Greek</option>
+                    <option value="pl-PL">Polish</option>
+                    <option value="cs-CZ">Czech</option>
+                    <option value="hu-HU">Hungarian</option>
+                    <option value="ro-RO">Romanian</option>
+                    <option value="sv-SE">Swedish</option>
+                </select>
+            </div>
+
+            <div>
+                <label for="uiLanguage" id="uiLangLabel">介面語言</label>
+                <select id="uiLanguage">
+                    <option value="zh-TW">中文</option>
+                    <option value="zh-CN">简体中文</option>
+                    <option value="en">English</option>
+                    <option value="fr">Français</option>
+                    <option value="pt">Português</option>
+                    <option value="ar">العربية</option>
+                    <option value="hi">हिन्दी</option>
+                    <option value="ja">日本語</option>
+                    <option value="ko">한국어</option>
+                    <option value="id">Bahasa Indonesia</option>
+                    <option value="ru">Русский</option>
+                    <option value="es">Español</option>
+                </select>
+            </div>
+
+            <div class="switch-row">
+                <div>
+                    <div class="switch-title" id="autoTranslateLabel">勾選後自動翻譯</div>
+                    <div class="switch-desc" id="autoTranslateDesc">選取文字時自動顯示翻譯浮框</div>
+                </div>
+                <label class="switch">
+                    <input type="checkbox" id="autoTranslateOnSelect">
+                    <span class="slider"></span>
+                </label>
+            </div>
+
+            <div style="margin-top:12px;">
+                <label id="excludedDomainsLabel" for="excludedDomainInput">排除網域</label>
+                <div class="switch-desc" id="excludedDomainsDesc">這些網域不啟用高亮與例句功能。</div>
+                <div class="domain-row">
+                    <input id="excludedDomainInput" type="text" placeholder="example.com" />
+                    <button id="addExcludedDomainBtn" type="button">加入</button>
+                </div>
+                <div class="domain-list" id="excludedDomainList"></div>
+            </div>
+        </div>
+
+        <div class="section">
+            <div class="io-title" id="importExportLabel">匯入 / 匯出字庫</div>
+            <div class="io-actions">
+                <button id="exportBtn" class="btn-secondary" type="button">匯出</button>
+                <button id="importBtn" class="btn-secondary" type="button">匯入</button>
+                <input type="file" id="importFile" style="display:none;" />
+            </div>
+        </div>
+
+        <div class="actions">
+            <button id="save">儲存</button>
+            <span class="status" id="saveStatus"></span>
+        </div>
     </div>
-    <button id="save">Save</button>
+
+    <script src="storage.js"></script>
+    <script src="ui-i18n.js"></script>
+    <script src="ui-toast.js"></script>
     <script src="options.js"></script>
 </body>
 </html>
