--- a/options.html
+++ b/options.html
@@ -358,6 +358,17 @@
                 </label>
             </div>
 
+            <div class="switch-row" id="dictionaryLookupRow">
+                <div>
+                    <div class="switch-title" id="dictionaryLookupLabel">啟用印尼詞典查詢</div>
+                    <div class="switch-desc" id="dictionaryLookupDesc">在翻譯結果中異步顯示 Kateglo 詞典詞性與解釋。</div>
+                </div>
+                <label class="switch">
+                    <input type="checkbox" id="dictionaryLookupEnabled">
+                    <span class="slider"></span>
+                </label>
+            </div>
+
             <div style="margin-top:12px;">
                 <label id="excludedDomainsLabel" for="excludedDomainInput">排除網域</label>
                 <div class="switch-desc" id="excludedDomainsDesc">這些網域不啟用高亮與例句功能。</div>
