--- a/popup.html
+++ b/popup.html
@@ -174,6 +174,12 @@
             margin-bottom: 8px;
             word-break: break-word;
         }
+        .word-count {
+            margin-left: 6px;
+            font-weight: 600;
+            font-size: 11px;
+            color: #98a2b3;
+        }
 
         .learned {
             text-decoration: line-through;
@@ -374,6 +380,7 @@
             <select id="sortMode">
                 <option value="recent_desc">依加入順序（新到舊）</option>
                 <option value="alpha_asc">依字母順序（A-Z）</option>
+                <option value="freq_desc">依詞頻（高到低）</option>
             </select>
         </div>
 
