--- a/options.html
+++ b/options.html
@@ -298,6 +298,7 @@
                     <option value="de-DE">German</option>
                     <option value="it-IT">Italian</option>
                     <option value="pt-PT">Portuguese</option>
+                    <option value="pt-BR">Portuguese (Brazil)</option>
                     <option value="nl-NL">Dutch</option>
                     <option value="ru-RU">Russian</option>
                     <option value="zh-CN">Chinese(Simplified)</option>
@@ -306,8 +307,11 @@
                     <option value="ko-KR">Korean</option>
                     <option value="ms-MY">Malay</option>
                     <option value="th-TH">Thai</option>
+                    <option value="ta-IN">Tamil</option>
+                    <option value="te-IN">Telugu</option>
                     <option value="vi-VN">Vietnamese</option>
                     <option value="tl-PH">Filipino</option>
+                    <option value="sw-KE">Swahili</option>
                     <option value="my-MM">Burmese</option>
                     <option value="km-KH">Khmer</option>
                     <option value="lo-LA">Lao</option>
