feat: Add page count functionality and improve UI text localization
- Implemented `getPageCount` function to calculate page counts based on word data.
- Updated `renderExamples` and `updateWordsList` functions to display page counts alongside encounter counts.
- Enhanced localization by replacing hardcoded strings with translation function calls in various UI components.
- Added new translation keys for improved user experience in multiple languages.
- Modified HTML to include an ID for the search label for better accessibility.

--- a/options.html
+++ b/options.html
@@ -286,50 +286,50 @@
         <p class="current"><span id="currentLangLabel">目前語言</span>：<strong id="currentLang">載入中...</strong></p>
 
         <div class="section">
-            <div class="section-title">一般設定</div>
+            <div class="section-title" id="generalSettingsTitle">一般設定</div>
             <div>
                 <label for="sourceLang" id="sourceLangLabel">翻譯來源語言</label>
                 <select id="sourceLang">
                     <option value="auto">Auto</option>
-                    <option value="en-US">English</option>
-                    <option value="id-ID">Indonesian</option>
-                    <option value="es-ES">Spanish</option>
-                    <option value="fr-FR">French</option>
-                    <option value="de-DE">German</option>
-                    <option value="it-IT">Italian</option>
-                    <option value="pt-PT">Portuguese</option>
-                    <option value="pt-BR">Portuguese (Brazil)</option>
-                    <option value="nl-NL">Dutch</option>
-                    <option value="ru-RU">Russian</option>
-                    <option value="zh-CN">Chinese(Simplified)</option>
-                    <option value="zh-TW">Chinese(Traditional)</option>
-                    <option value="ja-JP">Japanese</option>
-                    <option value="ko-KR">Korean</option>
-                    <option value="ms-MY">Malay</option>
-                    <option value="th-TH">Thai</option>
-                    <option value="ta-IN">Tamil</option>
-                    <option value="te-IN">Telugu</option>
-                    <option value="vi-VN">Vietnamese</option>
-                    <option value="tl-PH">Filipino</option>
-                    <option value="sw-KE">Swahili</option>
-                    <option value="my-MM">Burmese</option>
-                    <option value="km-KH">Khmer</option>
-                    <option value="lo-LA">Lao</option>
-                    <option value="jv-ID">Javanese</option>
-                    <option value="su-ID">Sundanese</option>
-                    <option value="ar-SA">Arabic</option>
-                    <option value="hi-IN">Hindi</option>
-                    <option value="bn-BD">Bengali</option>
-                    <option value="ur-PK">Urdu</option>
-                    <option value="fa-IR">Persian</option>
-                    <option value="tr-TR">Turkish</option>
-                    <option value="he-IL">Hebrew</option>
-                    <option value="el-GR">Greek</option>
-                    <option value="pl-PL">Polish</option>
-                    <option value="cs-CZ">Czech</option>
-                    <option value="hu-HU">Hungarian</option>
-                    <option value="ro-RO">Romanian</option>
-                    <option value="sv-SE">Swedish</option>
+                    <option value="en-US">English | English</option>
+                    <option value="id-ID">Indonesian | Bahasa Indonesia</option>
+                    <option value="es-ES">Spanish | Español</option>
+                    <option value="fr-FR">French | Français</option>
+                    <option value="de-DE">German | Deutsch</option>
+                    <option value="it-IT">Italian | Italiano</option>
+                    <option value="pt-PT">Portuguese | Português</option>
+                    <option value="pt-BR">Portuguese (Brazil) | Português (Brasil)</option>
+                    <option value="nl-NL">Dutch | Nederlands</option>
+                    <option value="ru-RU">Russian | Русский</option>
+                    <option value="zh-CN">Chinese (Simplified) | 简体中文</option>
+                    <option value="zh-TW">Chinese (Traditional) | 繁體中文</option>
+                    <option value="ja-JP">Japanese | 日本語</option>
+                    <option value="ko-KR">Korean | 한국어</option>
+                    <option value="ms-MY">Malay | Bahasa Melayu</option>
+                    <option value="th-TH">Thai | ไทย</option>
+                    <option value="ta-IN">Tamil | தமிழ்</option>
+                    <option value="te-IN">Telugu | తెలుగు</option>
+                    <option value="vi-VN">Vietnamese | Tiếng Việt</option>
+                    <option value="tl-PH">Filipino | Filipino</option>
+                    <option value="sw-KE">Swahili | Kiswahili</option>
+                    <option value="my-MM">Burmese | မြန်မာ</option>
+                    <option value="km-KH">Khmer | ខ្មែរ</option>
+                    <option value="lo-LA">Lao | ລາວ</option>
+                    <option value="jv-ID">Javanese | Basa Jawa</option>
+                    <option value="su-ID">Sundanese | Basa Sunda</option>
+                    <option value="ar-SA">Arabic | العربية</option>
+                    <option value="hi-IN">Hindi | हिन्दी</option>
+                    <option value="bn-BD">Bengali | বাংলা</option>
+                    <option value="ur-PK">Urdu | اردو</option>
+                    <option value="fa-IR">Persian | فارسی</option>
+                    <option value="tr-TR">Turkish | Türkçe</option>
+                    <option value="he-IL">Hebrew | עברית</option>
+                    <option value="el-GR">Greek | Ελληνικά</option>
+                    <option value="pl-PL">Polish | Polski</option>
+                    <option value="cs-CZ">Czech | Čeština</option>
+                    <option value="hu-HU">Hungarian | Magyar</option>
+                    <option value="ro-RO">Romanian | Română</option>
+                    <option value="sv-SE">Swedish | Svenska</option>
                 </select>
             </div>
 
