--- a/words.html
+++ b/words.html
@@ -396,7 +396,7 @@
             </select>
         </div>
         <div class="search-row">
-            <label class="search-label" for="searchInput">快速搜尋</label>
+            <label class="search-label" id="searchLabel" for="searchInput">快速搜尋</label>
             <input id="searchInput" type="text" placeholder="搜尋單詞、意思、詞典解釋" />
         </div>
 
